--- a/topical-2.html
+++ b/topical-2.html
@@ -145,7 +145,7 @@
                       Studenten kjenner til grunnleggende konsepter innen
                       programmering, med fokus på prosedyre-orientert og
                       objekt-orientert programmering. Selv om studenten kan primært
-                      programmere i 
+                      programmere i <br> 
                       <!-- Link i tekst til side om Java: https://www.w3schools.com/java/java_intro.asp -->
                       <a class="java" 
                       href="https://www.w3schools.com/java/java_intro.asp"
