--- a/campus.html
+++ b/campus.html
@@ -41,19 +41,19 @@
         </div>
       </div>
     </header>
-
+    <div class="heading-container">
       <div class="main-heading">
         <h1>
           Våre studiesteder
         </h1>
-      </div>
-        <p class="sub-heading">
+        <p>
           OsloMet har studiesteder både i Oslo og på Kjeller ved Lillestrøm. Vår største campus ligger sentralt i Oslo 
           ved Bislett, og campusen på Kjeller er lett tilgjengelig med kollektivtransport fra Oslo sentrum og Oslo lufthavn. 
         </p>
       </div>
+    </div>
 
-        <div class="innledning-checkbox">
+       <div class="innledning-checkbox">
           <input type="checkbox" id="title-4" />
             <label for="title-4">
 
@@ -189,6 +189,7 @@
           </div>
         </div>
 
+
       <div class="footer">
         <footer>
           <p>
@@ -197,7 +198,7 @@
           <p class="eksamen">
             Laget til eksamen, høsten 2023 i faget DATA1200 ved OsloMet.
           </p>
-        </footer>
+        </footer> 
       </div>
   </body>
 </html>
