--- a/index.html
+++ b/index.html
@@ -51,41 +51,37 @@
       </header>
     <!-- Denne div'en inneholder heading og sub-heading -->
     <!-- Div'en er laget for å style bakgrunnen til begge headingene -->
+    <div class="content-index">
       <div class="heading-container">
         <div class="main-heading">
-          <h1>
-            Dette er OsloMet
-          </h1>
-          <p class="sub-heading">
-            Visste du at OsloMet er Norges tredje største universitet?
-            Hos oss er det kort vei mellom utdanning og forskning.
-          </p>
+          <div>
+              <h1>
+              Dette er OsloMet <br>
+            </h1>
+            <p>
+              Visste du at OsloMet er Norges <br>
+              tredje største universitet? <br>
+              Hos oss er det kort vei mellom <br> 
+              utdanning og forskning.
+            </p>
+          </div>
         </div>
-        <!-- Her har vi lagt til en tom div for å enklere style plasseringen av tekst på nettsiden -->
-        <div class="empty"></div>
+        <img src="./img/Dette er OsloMet.webp" class="image-index"
+        alt="illustrasjon_av_student">
       </div>
-      <!-- Denne div'en inneholder bildet som ligger under headingene på siden -->
-      <!-- Bildet er kopiert fra: https://www.oslomet.no/studier/studenthistorier/dette-er-oslomet -->
-      <div class="bilde-studiestart">
-        <div class="bilde-studiestart">
-          <!-- Dersom bildet ikke kan lastes inn på nettsiden har vi lagt til en alternativ tekst som beskriver bildet-->
-          <!-- Bredden på bildet er kodet slik at det skal oppta 100% av div'en det er plassert i -->
-          <img src="./img/studiestart-foto.webp"
-          alt="bilde-studiestart" style="width: 100%;">
-        </div>
+      <!-- Her har vi lagt til en tom div for å enklere style plasseringen av tekst på nettsiden -->
+    </div>
+    <div class="about-oslomet-container">
+      <!-- Denne linker til det originale bildet -->
+      <!-- "target=_blank" taggen sørger for at linken åpnes i en ny fane. -->
+      <div class="original-image-studiestart">
+        <a class="original-image"
+        href="https://images.pexels.com/photos/18988561/pexels-photo-18988561/free-photo-of-pink-paper-surface.jpeg"
+        target="_blank">
+        <!-- This is the photographer of the original image -->
+          Bakgrunn: Hentet fra Images.Pexels.com
+        </a>
       </div>
-      <!-- Dette er et grid. Det inneholder link til den originale kilden til bildet -->
-      <div class="about-oslomet-container">
-        <!-- Denne linker til det originale bildet -->
-        <!-- "target=_blank" taggen sørger for at linken åpnes i en ny fane. -->
-        <div class="original-image-studiestart">
-          <a class="original-image"
-          href="https://www.oslomet.no/var/oslomet/storage/images/_aliases/xlarge/3/5/5/3/83553-1-nor-NO/Studiestart_foto_Benjamin_A_Ward_Cropped.jpg"
-          target="_blank">
-          <!-- This is the photographer of the original image -->
-            Foto: Benjamin A. Ward
-          </a>
-        </div>
         <div class="about-oslomet">
           <!-- Denne testen er kopiert fra: https://www.oslomet.no/studier/studenthistorier/dette-er-oslomet-->
           <p>
@@ -93,6 +89,14 @@
             og har både storbyens puls og kort vei til arbeidslivet du senere skal bli en del av. I tillegg har vi et studiested på Kjeller, 
             som tilbyr flere populære studier. OsloMet er dessuten Norges tredje største universitet!
           </p>
+          <div class="image-study">
+            <img src="./img/Bilde-13.avif" alt="illustrasjon av student">
+          </div>
+          <a class="original-image"
+          href="https://img.freepik.com/free-vector/education-learning-concept-love-reading-people-reading-students-studying-preparing-examination-library-book-lovers-readers-modern-literature-flat-cartoon-vector-illustration_1150-60938.jpg?w=2000&t=st=1699527130~exp=1699527730~hmac=a82b69f54aafdea42eef912392691eb3622ae00b1d0dd4cddbafb3dd53338eea"
+          target="_blank">
+          Illustrasjon: Hentet fra Img.Freepik.com
+          </a>
           <h2>
             Bli noe som betyr noe
           </h2>
@@ -102,8 +106,16 @@
             utdanning. Og allerede i studietiden vil du merke at du kan gjøre en forskjell for andre mennesker.
           </p>
         </div>
-        <!-- En tom div for å style plassering av tekst på siden -->
-        <div class="empty"></div>
+        <!-- Link til originalt bilde  -->
+        <div class="original-image-studiestart">
+            <a class="original-image"
+              href="https://media.istockphoto.com/id/1341812465/vector/young-creator-working-at-home-and-relax.jpg?s=1024x1024&w=is&k=20&c=bsnlUnwaTogVwo73GCDVgiOXcxA-E1eImI0YVOwuIjQ="
+              target="_blank">
+              <!-- This is the photographer of the original image -->
+                Illustrasjon: Hentet fra Media.Istockphoto.com
+              </a>
+          </div>
+        </div>
       </div>
       <!-- Dette er et grid som inneholder statistikk -->
       <!-- Informasjonen er hentet fra: https://www.oslomet.no/studier/studenthistorier/dette-er-oslomet -->
@@ -200,6 +212,14 @@
         <h3>
           Studere i utlandet?
         </h3>
+        <div class="image-study">
+          <img src="./img/study-abroad.webp" alt="illustrasjon studere i utlandet">
+        </div>
+        <a class="original-image"
+        href="https://www.123rf.com/photo_215008857_traveling-around-the-world-concept-cartoon-vector-illustration-of-travel-around-the-world.html"
+        target="_blank">
+        Illustrasjon: Hentet fra 123rf.com
+        </a>
         <p>
           Hva med å ta et semester i Amsterdam eller København? Eller hvorfor ikke hoppe i det, og reise til Chile, Sør-Afrika 
           eller Hawaii? 
