--- a/accessibility.html
+++ b/accessibility.html
@@ -57,7 +57,7 @@
       </h1>
     <!-- Dette er teksten under overskriften, brukt som en slags underoverskrift-->
     <p>
-      Vi har kjørt accessibility test gjennom lighthouse i Google Chrome.  
+      Vi har kjørt accessibility test gjennom Lighthouse i Google Chrome.  
       Dette gjøres for å sjekke hvor universelt utformet en nettside er. 
       Likevel har denne testen begrensninger. Nedenfor er det derfor en 
       liste over ting testen ikke beregner score ut fra, men som vi har gjort,  
