--- a/index.html
+++ b/index.html
@@ -66,10 +66,11 @@
             </p>
           </div>
         </div>
-        <img src="./img/Dette er OsloMet.webp" class="image-index"
-        alt="illustrasjon_av_student">
+        <div class="content-index-image">
+          <img src="./img/Dette er OsloMet.webp" class="image-index"
+          alt="illustrasjon_av_student">
+        </div>
       </div>
-      <!-- Her har vi lagt til en tom div for å enklere style plasseringen av tekst på nettsiden -->
     </div>
     <div class="about-oslomet-container">
       <!-- Denne linker til det originale bildet -->
@@ -78,7 +79,7 @@
         <a class="original-image"
         href="https://images.pexels.com/photos/18988561/pexels-photo-18988561/free-photo-of-pink-paper-surface.jpeg"
         target="_blank">
-        <!-- This is the photographer of the original image -->
+        <!-- Kilde hvor bildet er hentet fra  -->
           Bakgrunn: Hentet fra Images.Pexels.com
         </a>
       </div>
@@ -92,7 +93,7 @@
           <div class="image-study">
             <img src="./img/Bilde-13.avif" alt="illustrasjon av student">
           </div>
-          <a class="original-image"
+          <a class="original-image-header"
           href="https://img.freepik.com/free-vector/education-learning-concept-love-reading-people-reading-students-studying-preparing-examination-library-book-lovers-readers-modern-literature-flat-cartoon-vector-illustration_1150-60938.jpg?w=2000&t=st=1699527130~exp=1699527730~hmac=a82b69f54aafdea42eef912392691eb3622ae00b1d0dd4cddbafb3dd53338eea"
           target="_blank">
           Illustrasjon: Hentet fra Img.Freepik.com
