--- a/accessibility.html
+++ b/accessibility.html
@@ -6,7 +6,7 @@
     </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./css/main.css">
@@ -189,11 +189,11 @@
             </div>
           </div>
           <div class="box box-4">
-            <img class="img" src="/img/Accessibility_nytt_design_index.webp" alt="accessibility test etter nytt design"
+            <img class="img" src="./img/Accessibility_nytt_design_index.webp" alt="accessibility test etter nytt design"
             style="width: 100%;">
             <div class="overlay">
               <div class="text">
-                <a href="/img/Accessibility_nytt_design_index.webp" target="_blank">
+                <a href="./img/Accessibility_nytt_design_index.webp" target="_blank">
                   <p>
                     Testen viser accessibility etter at vi endret designet på siden.
                   </p>
