--- a/campus.html
+++ b/campus.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/main.css">
   </head>
   <body>
-    <!-- Dette er det gule banneret på toppen av siden vår -->
+    <!-- Dette er banneret på toppen av siden vår -->
     <header class="banner-container">
       <div class="oslomet-logo">
         <!-- Dette er en link til den kopierte logoen som er plassert i img-mappen -->
