--- a/topical.html
+++ b/topical.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./css/topical.css">
   </head>
   <body>
+<!-------------- På denne siden har vi prøvd oss på et annet design, 
+og et litt annet kodeoppsett enn de andre sidene våre -------->
 
 <!------------------ Header --------------------->
 
