--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <link rel="stylesheet" type="text/css" href="./css/main.css"> 
       </head>
       <body>
-            <!-- Dette er det gule banneret på toppen av siden -->
+            <!-- Dette er banneret på toppen av siden -->
             <!-- Koden er plassert i div'er gjennomgående. Dette er for å style koden lettere -->
             <header class="banner-container">
                 <!-- Denne diven inneholder logoen som vises øverst på venstre side av nettsiden vår -->
