--- a/accessibility.html
+++ b/accessibility.html
@@ -252,11 +252,11 @@
               </div>
             </div>
             <div class="box box-5">
-              <img class="img" src="/img/Accessibility_nytt_design_topical.webp" alt="accessibility test etter endring av design"
+              <img class="img" src="./img/Accessibility_nytt_design_topical.webp" alt="accessibility test etter endring av design"
               style="width: 100%;">
               <div class="overlay">
                 <div class="text">
-                  <a href="/img/Accessibility_nytt_design_topical.webp" target="_blank">
+                  <a href="./img/Accessibility_nytt_design_topical.webp" target="_blank">
                     <p>
                       Designet på denne siden er ikke det samme som på 
                       de øvrige sidene våre, og accessibilitien er dårligere på dette designet.
@@ -313,11 +313,11 @@
               </div>
             </div>
             <div class="box box-6">
-              <img class="img" src="/img/Accessibility_nytt_design_campus.webp" alt="bilde av accessibility-testen etter endring av design"
+              <img class="img" src="./img/Accessibility_nytt_design_campus.webp" alt="bilde av accessibility-testen etter endring av design"
               style="width: 100%;">
               <div class="overlay">
                 <div class="text">
-                  <a href="/img/Accessibility_nytt_design_campus.webp" target="_blank">
+                  <a href="./img/Accessibility_nytt_design_campus.webp" target="_blank">
                     <p>
                       Testen etter at vi endret designet viser samme accessibility score som før endringen.
                     </p>
