--- a/topical.html
+++ b/topical.html
@@ -23,9 +23,21 @@ og et litt annet kodeoppsett enn de andre sidene våre -------->
           <div class="nav-links">
             <!-- Linkene er plassert i en uordnet liste, som listeelementer -->
             <ul>
-              <li><a href="index.html">DETTE ER OSLOMET </a></li>
-              <li><a href="campus.html">VÅRE STUDIESTEDER</a></li>
-              <li><a href="accessibility.html">ACCESSIBILITY</a></li>
+              <li>
+                <a href="index.html">
+                  DETTE ER OSLOMET 
+                </a>
+              </li>
+              <li>
+                <a href="campus.html">
+                  VÅRE STUDIESTEDER
+                </a>
+              </li>
+              <li>
+                <a href="accessibility.html">
+                  ACCESSIBILITY
+                </a>
+              </li>
             </ul>
           </div>
       </nav>
