link til css- og img-mappe

--- a/campus.html
+++ b/campus.html
@@ -6,7 +6,7 @@
     </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <!-- Dette er banneret på toppen av siden vår -->
@@ -17,7 +17,7 @@
         <!-- Når du klikker på logoen tas du til oslomet.no -->
         <a class="oslomet-logo" href="https://www.oslomet.no/"
         target="_blank">
-          <img src="./img/oslomet-logo-black.svg" alt="OsloMet sin logo">
+          <img src="img/oslomet-logo-black.svg" alt="OsloMet sin logo">
         </a>
       </div>
       <div class="dropdown">
@@ -66,7 +66,7 @@
 
                 <a href="https://www.oslomet.no/var/oslomet/storage/images/_aliases/xxlarge/8/1/8/1/1818-8-nor-NO/pilestredet.jpg" target="_blank">
                   <div class="campus-bilde">
-                  <img class="bilde-pilestredet" src="./img/pilestredet-campus.webp" alt="OsloMet campus Pilestredet sett fra inngangen til gamle Frydenlundt">
+                  <img class="bilde-pilestredet" src="img/pilestredet-campus.webp" alt="OsloMet campus Pilestredet sett fra inngangen til gamle Frydenlundt">
                   </div>
                 </a>
 
