--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <!-- Dette indikerer nettsidens tegnkoding -->
             <meta charset="utf-8">
             <!-- Linker html filen til CSS filen vår  -->
-            <link rel="stylesheet" type="text/css" href="./css/main.css"> 
+            <link rel="stylesheet" type="text/css" href="css/main.css"> 
       </head>
       <body>
             <!-- Dette er banneret på toppen av siden -->
@@ -22,7 +22,7 @@
                   <!-- Bildet er gitt en alternativ tekst hvis den ikke kan vises på siden -->
                   <!-- Når du klikker på logoen tas du til oslomet.no -->
                   <a class="oslomet-logo" href="https://www.oslomet.no/" target="_blank">
-                    <img src="./img/oslomet-logo-black.svg" alt="OsloMet sin logo">
+                    <img src="img/oslomet-logo-black.svg" alt="OsloMet sin logo">
                   </a>
               </div>
                   <!-- Denne knappen er stylet slik at den gjøres om til den nettrekksmeny -->
@@ -66,7 +66,7 @@
                   </div>
                 </div>
             <div class="content-index-image">
-              <img src="./img/Dette er OsloMet.webp" class="image-index" alt="illustrasjon_av_student">
+              <img src="img/Dette er OsloMet.webp" class="image-index" alt="illustrasjon_av_student">
             </div>
           </div>
         </div>
@@ -89,7 +89,7 @@
                 som tilbyr flere populære studier. OsloMet er dessuten Norges tredje største universitet!
               </p>
             <div class="image-study">
-              <img src="./img/Bilde-13.avif" alt="illustrasjon av student">
+              <img src="img/Bilde-13.avif" alt="illustrasjon av student">
             </div>
               <a class="original-image-header"
               href="https://img.freepik.com/free-vector/education-learning-concept-love-reading-people-reading-students-studying-preparing-examination-library-book-lovers-readers-modern-literature-flat-cartoon-vector-illustration_1150-60938.jpg?w=2000&t=st=1699527130~exp=1699527730~hmac=a82b69f54aafdea42eef912392691eb3622ae00b1d0dd4cddbafb3dd53338eea"
@@ -212,7 +212,7 @@
                 Studere i utlandet?
               </h3>
             <div class="image-study">
-                <img src="./img/study-abroad.webp" alt="illustrasjon studere i utlandet">
+                <img src="img/study-abroad.webp" alt="illustrasjon studere i utlandet">
             </div>
                 <a class="original-image"
                 href="https://www.123rf.com/photo_215008857_traveling-around-the-world-concept-cartoon-vector-illustration-of-travel-around-the-world.html"
