--- a/topical.html
+++ b/topical.html
@@ -5,7 +5,7 @@
     <title>
       DAPE1400 Programmering
     </title>
-    <link rel="stylesheet" href="./css/topical.css">
+    <link rel="stylesheet" href="css/topical.css">
   </head>
   <body>
 <!-------------- På denne siden har vi prøvd oss på et annet design, 
@@ -19,7 +19,7 @@ og et litt annet kodeoppsett enn de andre sidene våre -------->
         <!-- Når man klikker på logoen åpnes oslomet.no i en fane -->
         <a class="oslomet-logo" href="https://www.oslomet.no/"
         target="_blank">
-          <img src="./img/oslomet-logo-black.svg" alt="OsloMet sin logo"></a>
+          <img src="img/oslomet-logo-black.svg" alt="OsloMet sin logo"></a>
           <div class="nav-links">
             <!-- Linkene er plassert i en uordnet liste, som listeelementer -->
             <ul>
@@ -94,7 +94,7 @@ og et litt annet kodeoppsett enn de andre sidene våre -------->
         <!-- Hvert bilde har et overlay av farge og tekst -->
         <section class="row">
           <div class="stat-col">
-            <img src="./img/Bilde-5.webp" alt="Kode">
+            <img src="img/Bilde-5.webp" alt="Kode">
             <div class="overlay-stat">
               <h3>
                 ENGELSK <br>
@@ -105,7 +105,7 @@ og et litt annet kodeoppsett enn de andre sidene våre -------->
           </div>
         </div>
           <div class="stat-col">
-            <img src="./img/Bilde-5.webp" alt="Kode">
+            <img src="img/Bilde-5.webp" alt="Kode">
             <div class="overlay-stat">
               <a href="https://www.oslomet.no/studier/studieoversikt"
               alt="OsloMet studieoversikt"
@@ -119,7 +119,7 @@ og et litt annet kodeoppsett enn de andre sidene våre -------->
             </div>
           </div>
           <div class="stat-col">
-            <img src="./img/Bilde-5.webp" alt="Kode">
+            <img src="img/Bilde-5.webp" alt="Kode">
             <div class="overlay-stat">
               <h3>
                 OMFANG: <br>
@@ -128,7 +128,7 @@ og et litt annet kodeoppsett enn de andre sidene våre -------->
             </div>
             </div>
           <div class="stat-col">
-            <img src="./img/Bilde-5.webp" alt="Kode">
+            <img src="img/Bilde-5.webp" alt="Kode">
             <div class="overlay-stat">
               <h3>
                 STUDIEÅR: <br>
@@ -205,7 +205,7 @@ og et litt annet kodeoppsett enn de andre sidene våre -------->
       <!-- Her er det lagt inn en illustrasjon av en programmerer -->
       <section>
         <div class="illustration-topical">
-          <img src="./img/Bilde-10.webp" 
+          <img src="img/Bilde-10.webp" 
           alt="Illustrasjon av programmerer" style="width: 100%;">
         </div>
         <!-- Link til det originale bildet -->
