--- a/accessibility.html
+++ b/accessibility.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/main.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <!-- Dette er det gule banneret på toppen av siden -->
@@ -23,7 +23,7 @@
           alt="OsloMet logo" 
           href="https://www.oslomet.no/"
           target="_blank">
-            <img src="./img/oslomet-logo-black.svg" alt="OsloMet sin logo">
+            <img src="img/oslomet-logo-black.svg" alt="OsloMet sin logo">
           </a>
         </div>
         <!-- Dette er en knapp stylet slik at den er en nedtrekksmeny -->
@@ -111,14 +111,14 @@
         og en klasse box-# som er unik for hver beholder/boks -->
         <div class="box box-1">
           <!-- Et screenshot av accessibility test -->
-          <img class="img" src="./img/accessibility-test-85.webp"  
+          <img class="img" src="img/accessibility-test-85.webp"  
           alt="accessibility test nr. 1" 
           style="width: 100%;">
         <div class="overlay">
           <div class="text">
             <!-- Link til en større versjon av testen. Denne åpnes i en tom fane -->
             <!-- Tekst og heading er link til dette bildet -->
-            <a href="./img/accessibility-test-85.webp" target="_blank">
+            <a href="img/accessibility-test-85.webp" target="_blank">
               <p>
                 Testen viser at vi mangler en alternativ tekst for OsloMet logoen, og accessibility scoren var 85.
               </p>
@@ -132,12 +132,12 @@
         </div>
       </div>
       <div class="box box-2">
-        <img class="img" src="./img/Code before.webp"  
+        <img class="img" src="img/Code before.webp"  
         alt="kode_før_endring" 
         style="width: 100%;">
           <div class="overlay">
             <div class="text">
-              <a href="./img/Code before.webp" target="_blank">
+              <a href="img/Code before.webp" target="_blank">
                 <p>
                   Slik så koden ut uten alternativ tekst for bildet.
                 </p>
@@ -151,12 +151,12 @@
           </div>
         </div>
         <div class="box box-3">
-          <img class="img" src="./img/Code after.webp" 
+          <img class="img" src="img/Code after.webp" 
           alt="Kode_etter_endring"
           style="width: 100%;">
             <div class="overlay">
               <div class="text">
-                <a href="./img/Code after.webp" target="_blank">
+                <a href="img/Code after.webp" target="_blank">
                   <p>
                     Slik så koden ut etter vi la til alternativ tekst for OsloMet logoen.
                   </p>
@@ -170,12 +170,12 @@
             </div>
           </div>
           <div class="box box-4">
-            <img class="img" src="./img/accessibility_index.webp" 
+            <img class="img" src="img/accessibility_index.webp" 
             alt="Kode før"
             style="width: 100%;">
             <div class="overlay">
               <div class="text">
-                <a href="./img/accessibility_index.webp" target="_blank">
+                <a href="img/accessibility_index.webp" target="_blank">
                   <p>
                     Testen etter at vi la til alt-tekst på OsloMet logoen viser en accessibility score på 97.
                   </p>
@@ -189,11 +189,11 @@
             </div>
           </div>
           <div class="box box-4">
-            <img class="img" src="./img/Accessibility_nytt_design_index.webp" alt="accessibility test etter nytt design"
+            <img class="img" src="img/Accessibility_nytt_design_index.webp" alt="accessibility test etter nytt design"
             style="width: 100%;">
             <div class="overlay">
               <div class="text">
-                <a href="./img/Accessibility_nytt_design_index.webp" target="_blank">
+                <a href="img/Accessibility_nytt_design_index.webp" target="_blank">
                   <p>
                     Testen viser accessibility etter at vi endret designet på siden.
                   </p>
@@ -233,12 +233,12 @@
             </h2>
           </div>
           <div class="box box-5">
-            <img class="img" src="./img/accessibility_topical.webp"  
+            <img class="img" src="img/accessibility_topical.webp"  
             alt="accessibility test" 
             style="width: 100%;">
               <div class="overlay">
                 <div class="text">
-                  <a href="./img/accessibility_topical.webp" target="_blank">
+                  <a href="img/accessibility_topical.webp" target="_blank">
                     <p>
                       Testen viser en score på 97 etter vi la til alternativ tekst for OsloMet logoen.
                     </p>
@@ -252,11 +252,11 @@
               </div>
             </div>
             <div class="box box-5">
-              <img class="img" src="./img/Accessibility_nytt_design_topical.webp" alt="accessibility test etter endring av design"
+              <img class="img" src="img/Accessibility_nytt_design_topical.webp" alt="accessibility test etter endring av design"
               style="width: 100%;">
               <div class="overlay">
                 <div class="text">
-                  <a href="./img/Accessibility_nytt_design_topical.webp" target="_blank">
+                  <a href="img/Accessibility_nytt_design_topical.webp" target="_blank">
                     <p>
                       Designet på denne siden er ikke det samme som på 
                       de øvrige sidene våre, og accessibilitien er dårligere på dette designet.
@@ -294,12 +294,12 @@
                 </h2>
               </div>
               <div class="box box-6">
-                <img class="img" src="./img/accessibility_campus.webp"  
+                <img class="img" src="img/accessibility_campus.webp"  
                 alt="accessibility test" 
                 style="width: 100%;">
               <div class="overlay">
                 <div class="text">
-                  <a href="./img/accessibility_campus.webp" target="_blank">
+                  <a href="img/accessibility_campus.webp" target="_blank">
                     <p>
                       Testen viser en score på 100 etter vi la til alternativ tekst for OsloMet logoen.
                     </p>
@@ -313,11 +313,11 @@
               </div>
             </div>
             <div class="box box-6">
-              <img class="img" src="./img/Accessibility_nytt_design_campus.webp" alt="bilde av accessibility-testen etter endring av design"
+              <img class="img" src="img/Accessibility_nytt_design_campus.webp" alt="bilde av accessibility-testen etter endring av design"
               style="width: 100%;">
               <div class="overlay">
                 <div class="text">
-                  <a href="./img/Accessibility_nytt_design_campus.webp" target="_blank">
+                  <a href="img/Accessibility_nytt_design_campus.webp" target="_blank">
                     <p>
                       Testen etter at vi endret designet viser samme accessibility score som før endringen.
                     </p>
