--- a/topical.html
+++ b/topical.html
@@ -201,7 +201,7 @@ og et litt annet kodeoppsett enn de andre sidene våre -------->
         </section>
       </section>
 
-      <!-------- Bilde ------->
+      <!-------- BILDE ------->
       <!-- Her er det lagt inn en illustrasjon av en programmerer -->
       <section>
         <div class="illustration-topical">
@@ -210,9 +210,9 @@ og et litt annet kodeoppsett enn de andre sidene våre -------->
         </div>
         <!-- Link til det originale bildet -->
         <a class="original-image"
-        href="https://pixabay.com/photos/manhattan-monitor-binary-3866140/ "
+        href="https://as2.ftcdn.net/v2/jpg/01/80/58/87/1000_F_180588791_fchL6FWwOB1Vl9QngsKgzz6kIxVffayA.jpg"
         target="_blank">
-        Illustrasjon: Ukjen/hentet fra PixaBay.com
+        Illustrasjon: Hentet fra Stock.Adobe.com
         </a>
         
       </section>
