--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               href="https://images.pexels.com/photos/18988561/pexels-photo-18988561/free-photo-of-pink-paper-surface.jpeg"
               target="_blank">
             <!-- Kilde hvor bildet er hentet fra  -->
-                Bakgrunn: Hentet fra Images.Pexels.com
+                Bakgrunn: Images.Pexels.com
               </a>
             </div>
           <div class="about-oslomet">
@@ -111,7 +111,7 @@
                 href="https://media.istockphoto.com/id/1341812465/vector/young-creator-working-at-home-and-relax.jpg?s=1024x1024&w=is&k=20&c=bsnlUnwaTogVwo73GCDVgiOXcxA-E1eImI0YVOwuIjQ="
                 target="_blank">
                 <!-- This is the photographer of the original image -->
-                  Illustrasjon: Hentet fra Media.Istockphoto.com
+                  Illustrasjon: Media.Istockphoto.com
                 </a>
               </div>
             </div>
