legg til linker i footer
kommenter css, og legg til styling til linker i footer

--- a/topical.html
+++ b/topical.html
@@ -362,22 +362,49 @@ og et litt annet kodeoppsett enn de andre sidene våre -------->
 
   <!---------- FOOTER ----------->
 
-
-      <div class="footer">
-        <footer>
-          <!-- Link til kilden vi har hentet tekst og bilde fra  -->
-          <p>
-            All informasjon på denne siden er hentet fra
-            <a class="kildelink" href="https://student.oslomet.no/studier/-/studieinfo/emne/DAPE1400/2022/H%C3%98ST" alt ="link til siden hvor teksten på siden er hentet fra">
-              Studieinfo emne DAPE1400 2022 Programmering
-              </a>
-          </p>
-          <!-- Hvorfor vi har laget siden -->
-          <p class="eksamen">
-            Laget til eksamen, høsten 2023 i faget DATA1200 ved OsloMet.
-          </p>
-        </footer>
-      </div>
+          <section>
+            <div class="footer">
+              <footer>
+                <!-- Link til kilden vi har hentet tekst og bilde fra  -->
+                <p>
+                  All informasjon på denne siden er hentet fra
+                  <a class="kildelink" href="https://student.oslomet.no/studier/-/studieinfo/emne/DAPE1400/2022/H%C3%98ST" alt ="link til siden hvor teksten på siden er hentet fra">
+                    Studieinfo emne DAPE1400 2022 Programmering
+                    </a>
+                </p>
+                <!-- Hvorfor vi har laget siden -->
+                <p class="eksamen">
+                  Laget til eksamen, høsten 2023 i faget DATA1200 ved OsloMet.
+                </p>
+                <div class="nav-links-footer">
+                  <!-- Linkene til de andre sidene våre legges også neders, slik at man ikke må scrolle til toppen av siden for å tas videre -->
+                  <!-- Linkene er plassert i en uordnet liste, som listeelementer -->
+                    <nav>   
+                      <p>
+                        Linker til de andre sidene våre:
+                      </p>
+                      <ul>
+                        <li>
+                          <a href="index.html">
+                            DETTE ER OSLOMET 
+                          </a>
+                        </li>
+                        <li>
+                          <a href="campus.html">
+                            VÅRE STUDIESTEDER
+                          </a>
+                        </li>
+                        <li>
+                          <a href="accessibility.html">
+                            ACCESSIBILITY
+                          </a>
+                        </li>
+                      </ul>
+                    </div>
+                </nav>
+              </footer>
+            </div>
+          </section>
     </body>
   </html>
   </body>
