--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 som tilbyr flere populære studier. OsloMet er dessuten Norges tredje største universitet!
               </p>
             <div class="image-study">
-              <img src="img/Bilde-13.avif" alt="illustrasjon av student">
+              <img src="img/Bilde-14.webp" alt="illustrasjon av student">
             </div>
               <a class="original-image-header"
               href="https://img.freepik.com/free-vector/education-learning-concept-love-reading-people-reading-students-studying-preparing-examination-library-book-lovers-readers-modern-literature-flat-cartoon-vector-illustration_1150-60938.jpg?w=2000&t=st=1699527130~exp=1699527730~hmac=a82b69f54aafdea42eef912392691eb3622ae00b1d0dd4cddbafb3dd53338eea"
