--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               </p>
           </div>
           <!-- Link til originalt bilde  -->
-          <div class="original-image-studiestart">
+          <div class="original-image-index">
               <a class="original-image"
                 href="https://media.istockphoto.com/id/1341812465/vector/young-creator-working-at-home-and-relax.jpg?s=1024x1024&w=is&k=20&c=bsnlUnwaTogVwo73GCDVgiOXcxA-E1eImI0YVOwuIjQ="
                 target="_blank">
