--- a/accessibility.html
+++ b/accessibility.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
+    <!-- DEN GJENNOMGÅENDE KODEN VÅR ER TIL EN VISS GRAD INSPIRERT AV KODE VI HAR FUNNET PÅ W3SCHOOLS.COM,
+        IMIDLERTID ER ALL KODE SKREVET OM AV OSS SLIK AT DEN PASSER VÅR SIDE  -->
+
+        
     <!-- Dette er det gule banneret på toppen av siden -->
     <!-- Innholdet er plasser i div'er gjennom hele koden for å style den lettere -->
     <header class="banner-container">
