--- a/campus.html
+++ b/campus.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
+    <!-- DEN GJENNOMGÅENDE KODEN VÅR ER TIL EN VISS GRAD INSPIRERT AV KODE VI HAR FUNNET PÅ W3SCHOOLS.COM,
+        IMIDLERTID ER ALL KODE SKREVET OM AV OSS SLIK AT DEN PASSER VÅR SIDE  -->
+
+        
     <!-- Dette er banneret på toppen av siden vår -->
     <header class="banner-container">
       <div class="oslomet-logo">
