--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             <link rel="stylesheet" type="text/css" href="css/main.css"> 
       </head>
       <body>
+        <!-- DEN GJENNOMGÅENDE KODEN VÅR ER TIL EN VISS GRAD INSPIRERT AV KODE VI HAR FUNNET PÅ W3SCHOOLS.COM,
+        IMIDLERTID ER ALL KODE SKREVET OM AV OSS SLIK AT DEN PASSER VÅR SIDE  -->
+
             <!-- Dette er banneret på toppen av siden -->
             <!-- Koden er plassert i div'er gjennomgående. Dette er for å style koden lettere -->
             <header class="banner-container">
