--- a/topical.html
+++ b/topical.html
@@ -14,6 +14,9 @@
   </head>
   <body>
 
+    <!-- DEN GJENNOMGÅENDE KODEN VÅR ER TIL EN VISS GRAD INSPIRERT AV KODE VI HAR FUNNET PÅ W3SCHOOLS.COM,
+        IMIDLERTID ER ALL KODE SKREVET OM AV OSS SLIK AT DEN PASSER VÅR SIDE  -->
+
 <!-------------- På denne siden har vi prøvd oss på et annet design, 
 og et litt annet kodeoppsett enn de andre sidene våre -------->
 
