--- a/accessibility.html
+++ b/accessibility.html
@@ -12,11 +12,15 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
+
     <!-- DEN GJENNOMGÅENDE KODEN VÅR ER TIL EN VISS GRAD INSPIRERT AV KODE VI HAR FUNNET PÅ W3SCHOOLS.COM,
         IMIDLERTID ER ALL KODE SKREVET OM AV OSS SLIK AT DEN PASSER VÅR SIDE  -->
 
-        
-    <!-- Dette er det gule banneret på toppen av siden -->
+
+    <!------------------ BANNER ------------------->
+
+
+    <!-- Dette er banneret på toppen av siden -->
     <!-- Innholdet er plasser i div'er gjennom hele koden for å style den lettere -->
     <header class="banner-container">
       <div class="oslomet-logo">
@@ -37,7 +41,7 @@
             Meny
           </button>
         <div class="dropdown-content">
-            <!-- Når du klikker på linken blir du tatt til en side om faget DAPE1400 -->
+            <!-- Link til side om faget DAPE1400 -->
             <!-- Dette gjør linken klikkbar -->
           <a href="topical.html">
             Infoside: DAPE1400 Programmering
@@ -53,6 +57,12 @@
         </div>
       </div>
     </header>
+
+
+  <!-------------------- HEADING ---------------------->
+
+
+  
   <!-- Overskriften på siden -->
   <div class="heading-container">
     <div class="main-heading">
@@ -69,6 +79,12 @@
       </p>
     </div>
   </div>
+
+
+
+  <!----------------- LISTE ------------------->
+
+
       <!-- En 'unordered list' som sørger for at listeelementene vises som bullet points på siden -->
      <div class="list-accessibility">
       <ul>
@@ -93,10 +109,16 @@
       </ul>
      </div>
   </div>
-  <!-- Accessibility testen for hver av sidene våre er lagt i checkbokser -->
-  <!-- Koden for checkboksene er lik som koden for checkboksene på de andre sidene og styles likt i CSS'en -->
+
+
+
+  <!--------------- CHECKBOXER --------------->
+
+
+  <!-- Accessibility testen for hver av sidene våre er lagt i checkboxer -->
+  <!-- Koden for checkboxene er lik som koden for checkboxene på de andre sidene og styles likt i CSS'en -->
   <div class="innledning-checkbox">
-    <!-- Hvert input og label på gis en unik id og for. Dette er slik at man skal kunne åpne checkboksene. -->
+    <!-- Hvert input og label gis en unik id og for. Dette er nødvendig for at man skal kunne åpne checkboksene. -->
     <!-- Dette er checkboks 1 -->
     <input type="checkbox" id="title-4" />
     <!-- Dette vises som "tittelen" til checkboksen -->
@@ -114,7 +136,7 @@
         <!-- Accessibility testene og koden er lagt i hver sin 'boks' Hver boks har en klasse box som er felles for alle boksene
         og en klasse box-# som er unik for hver beholder/boks -->
         <div class="box box-1">
-          <!-- Et screenshot av accessibility test -->
+          <!-- Inne i checkboksene har vi lagt informasjon om accessibility testen, med informasjon og screenshots -->
           <img class="img" src="img/accessibility-test-85.webp"  
           alt="accessibility test nr. 1" 
           style="width: 100%;">
@@ -218,10 +240,9 @@
         </div>
       </div>
 
-      <!-- Dette er checkboks 2 -->
+      <!-- Dette er checkbox 2 -->
     <div class="innledning-checkbox">
       <input type="checkbox" id="title-5" />
-      <!-- Tittelen til checkboksen -->
         <label for="title-5">
           <h2>
             Accessibility test topical.html
@@ -282,7 +303,7 @@
             </div>
           </div>
         </div>
-        <!-- Dette er checkboks 3 -->
+        <!-- Dette er checkbox 3 -->
         <div class="innledning-checkbox">
           <input type="checkbox" id="title-6" />
           <label for="title-6">
@@ -342,6 +363,12 @@
             </div>
           </div>
         </div> 
+
+
+        <!------------- FOOTER --------------->
+
+        <!-- Footeren er lik som på de andre sidene våre -->
+
         <div class="footer">  
           <footer>
             <p class="eksamen">
