--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <!-- DEN GJENNOMGÅENDE KODEN VÅR ER TIL EN VISS GRAD INSPIRERT AV KODE VI HAR FUNNET PÅ W3SCHOOLS.COM,
         IMIDLERTID ER ALL KODE SKREVET OM AV OSS SLIK AT DEN PASSER VÅR SIDE  -->
 
+
+        <!------------- BANNER ------------->
+
+
             <!-- Dette er banneret på toppen av siden -->
             <!-- Koden er plassert i div'er gjennomgående. Dette er for å style koden lettere -->
             <header class="banner-container">
@@ -30,6 +34,10 @@
               </div>
                   <!-- Denne knappen er stylet slik at den gjøres om til den nettrekksmeny -->
                   <!-- Nedtrekksmenyen inneholder linker til de øvrige sidene på nettstedet vårt -->
+        
+        <!------------- NEDTREKKSMENY ------------>
+
+
               <div class="dropdown">
                   <button class="dropdown-button">
                     Meny
@@ -51,6 +59,10 @@
                 </div>
             </div>
         </header>
+
+      <!--------------- HEADING -------------->
+
+
       <!-- Denne div'en inneholder heading og sub-heading -->
       <!-- Div'en er laget for å style bakgrunnen til begge headingene -->
             <div class="content-index">
@@ -84,6 +96,13 @@
                 Bakgrunn: Images.Pexels.com
               </a>
             </div>
+
+
+
+          <!------------ GRID --------------->
+
+
+
           <div class="about-oslomet">
             <!-- Denne testen er kopiert fra: https://www.oslomet.no/studier/studenthistorier/dette-er-oslomet-->
               <p>
@@ -119,6 +138,12 @@
               </div>
             </div>
           </div>
+
+
+          <!----------------- STATISTIKK ---------------->
+
+
+
           <!-- Dette er et grid som inneholder statistikk -->
           <!-- Informasjonen er hentet fra: https://www.oslomet.no/studier/studenthistorier/dette-er-oslomet -->
           <div class="statistics-grid-container">
@@ -196,6 +221,12 @@
             </div>
           </div>
         </div>
+
+
+
+        <!----------------- GRID ------------------->
+
+
           <div class="about-oslomet-container">
             <!-- En tom div for å style plasseringen av tekst på siden -->
           <div class="empty"></div>
@@ -243,7 +274,12 @@
         <!-- En tom div - for å style plasseringen av tekst på siden -->
             <div class="empty"></div>
           </div>
-      <!-- Denne div'en inneholder footeren -->
+
+
+
+          <!-------------- FOOTER ---------------->
+
+          
           <div class = "footer">  
         <!-- Footeren inneholder informasjon om hvor vi har hentet tekst og annen info på siden fra, i tillegg til forfattere av siden -->
             <footer>
