--- a/index.html
+++ b/index.html
@@ -286,7 +286,9 @@
               <p>
                 All informasjon på denne siden er hentet fra 
                 <!-- Her er det en link til siden som er "kopiert", og hvor tekst og bilde er tatt fra. -->
-                <a class= "kildelink" href="https://www.oslomet.no/studier/studenthistorier/dette-er-oslomet" alt ="link til siden hvor teksten på siden er hentet fra">
+                <a class= "kildelink" href="https://www.oslomet.no/studier/studenthistorier/dette-er-oslomet" 
+                alt ="link til siden hvor teksten på siden er hentet fra"
+                target="_blank">
                   OsloMet: "Dette er OsloMet"
                 </a>.
               </p>
