link til kilde åpnes i ny fane

--- a/campus.html
+++ b/campus.html
@@ -212,7 +212,12 @@
       <div class="footer">
         <footer>
           <p>
-            All informasjon på denne siden er hentet fra <a class= "kildelink" href="https://www.oslomet.no/om/studiesteder" alt ="link til siden hvor teksten på siden er hentet fra">OsloMet våre studiestader</a>.
+            All informasjon på denne siden er hentet fra 
+            <a class= "kildelink" href="https://www.oslomet.no/om/studiesteder" 
+            alt ="link til siden hvor teksten på siden er hentet fra"
+            target="_blank">
+            OsloMet våre studiestader
+          </a>.
           </p>
           <p class="eksamen">
             Laget til eksamen, høsten 2023 i faget DATA1200 ved OsloMet.
