--- a/topical.html
+++ b/topical.html
@@ -371,7 +371,10 @@ og et litt annet kodeoppsett enn de andre sidene våre -------->
                 <!-- Link til kilden vi har hentet tekst og bilde fra  -->
                 <p>
                   All informasjon på denne siden er hentet fra
-                  <a class="kildelink" href="https://student.oslomet.no/studier/-/studieinfo/emne/DAPE1400/2022/H%C3%98ST" alt ="link til siden hvor teksten på siden er hentet fra">
+                  <a class="kildelink" 
+                  href="https://student.oslomet.no/studier/-/studieinfo/emne/DAPE1400/2022/H%C3%98ST" 
+                  alt ="link til siden hvor teksten på siden er hentet fra"
+                  target="_blank">
                     Studieinfo emne DAPE1400 2022 Programmering
                     </a>
                 </p>
