--- a/campus.html
+++ b/campus.html
@@ -63,7 +63,7 @@
           Våre studiesteder
         </h1>
         <p>
-          OsloMet har studiesteder både i Oslo og på Kjeller ved Lillestrøm. Vår største campus ligger sentralt i Oslo 
+          OsloMet har studiesteder både i Oslo og på Kjeller ved Lillestrøm. Vårt største campus ligger sentralt i Oslo 
           ved Bislett, og campusen på Kjeller er lett tilgjengelig med kollektivtransport fra Oslo sentrum og Oslo lufthavn. 
         </p>
       </div>
@@ -132,10 +132,11 @@
             vår ligger i Clara Holsts hus i Pilestredet 46.
           </p>
           <h3 class="adresse">
-            Adresse
+            Adresse:
           </h3>
           <p class="adresse-universitetet">
-            Pilestredet 32 - 52, 0167 Oslo
+            Pilestredet 32 - 52 <br> 
+            0167 Oslo
           </p>
         </div>
       </div>
@@ -197,10 +198,11 @@
               sentralt plassert med rundt ti minutter reisetid fra Oslo lufthavn og Oslo sentrum
               </p>
             <h3 class="adresse">
-              Adresse
+              Adresse:
             </h3>
             <p class="adresse-universitetet">
-              Kunnskapsveien 55, 2007 Kjeller
+              Kunnskapsveien 55 <br>
+              2007 Kjeller
             </p>
           </div>
         </div>
