--- a/campus.html
+++ b/campus.html
@@ -68,6 +68,14 @@
         </p>
       </div>
     </div>
+    <div>
+      <a class="original-image"
+        href="https://images.pexels.com/photos/18988561/pexels-photo-18988561/free-photo-of-pink-paper-surface.jpeg"
+        target="_blank">
+      <!-- Kilde hvor bildet er hentet fra  -->
+        Bakgrunn: Images.Pexels.com
+      </a>
+    </div>
 
 
     <!------------------ CHECKBOXER ----------------->
